# libcos

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  TODO  TODO.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml  msvc.yml  scorecard.yml  semgrep.yml  sonarcloud.yml
.sonarlint/: connectedMode.json
cmake/: ClangFormat.cmake  Common.cmake  Coverage.cmake  Portability.cmake  Sanitizers.cmake  TestUtils.cmake
cmake/toolchains/: llvm.cmake  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  CosExample.h
examples/libcos/objects/: iterate-objects.c  traverse-document.c
include/cbind/common/: unique.hpp
include/cbind/ownership/: Ownable.hpp
include/libcos/: CosArrayObj.h  CosBaseObj.h  CosBasicTypes.h  CosBoolObj.h  CosDoc.h  CosDocument.h  CosIndirectObj.h  CosIntegerObj.h  CosNameObj.h  CosNullObj.h  CosObj.h  CosObjID.h  CosObject.h  CosParser.h  CosRealObj.h  CosStringObj.h
include/libcos++/: Doc.hpp
include/libcos++/common/: Exceptions.hpp  unique.hpp
include/libcos++/impl/: Doc.inl
include/libcos++/objects/: ArrayObj.hpp  NameObj.hpp  Obj.hpp  StreamObj.hpp
include/libcos++/ownership/: Ownable.hpp
include/libcos/common/: CosAPI.h  CosArray.h  CosAttributes.h  CosBasicStack.h  CosBasicTypes.h  CosClass.h  CosData.h  CosDataRef.h  CosDefines.h  CosDiagnostic.h  CosDiagnosticHandler.h  CosDict.h  CosError.h  CosList.h  CosLog.h  CosMacros.h  CosNumber.h  CosObj.h  CosRingBuffer.h  CosScanner.h  CosStack.h  CosStack.inl  CosString.h  CosTypes.h
include/libcos/filters/: CosASCII85Filter.h  CosASCIIHexFilter.h  CosFilter.h  CosRunLengthFilter.h
include/libcos/io/: CosFileInputStream.h  CosFileStream.h  CosInputStream.h  CosMemoryStream.h  CosStream.h  CosStreamReader.h  CosStreams.h  Format.h  string-support.h
include/libcos/objects/: CosArrayObj.h  CosArrayObjNode.h  CosBoolObj.h  CosBoolObjNode.h  CosDictObj.h  CosDictObjNode.h  CosDirectObj.h  CosIndirectObj.h  CosIndirectObjNode.h  CosIntObj.h  CosIntObjNode.h  CosIntegerObj.h  CosNameObj.h  CosNameObjNode.h  CosNullObj.h  CosNullObjNode.h  CosObj.h  CosObjNode.h  CosObjNodeTypes.h  CosObjectTypes.h  CosRealObj.h  CosRealObjNode.h  CosReferenceObj.h  CosReferenceObjNode.h  CosStreamObj.h  CosStreamObjNode.h  CosStringObj.h  CosStringObjNode.h
include/libcos/parse/: CosBaseParser.h  CosFileParser.h
include/libcos/syntax/: CosKeywords.h  CosLimits.h
include/libcos/xref/: CosXrefSection.h  CosXrefSubsection.h  CosXrefTable.h  CosXrefTableParser.h
src/: CosDoc-Private.h  CosDoc.c  CosDocument.c  CosObj.c  CosObject.c  config.h.in  dummy.c
src/common/: Assert.c  Assert.h  CharacterSet.c  CharacterSet.h  CosArray.c  CosBasicStack.c  CosClass.c  CosContainerUtils.h  CosData.c  CosData.h  CosDataBuffer.c  CosDataBuffer.h  CosDataRef.c  CosDiagnostic.c  CosDiagnosticHandler.c  CosDict.c  CosError.c  CosHashTable.c  CosHashTable.h  CosList.c  CosLog.c  CosMacros.h  CosObj.c  CosRingBuffer.c  CosScanner.c  CosStack.c  CosString-Impl.h  CosString.c  CosString.h  CosTypedArray.h  CosUtils.c  CosUtils.h  CosVector.c  CosVector.h  _CosInternalDefines.h  cos-strerror.c  cos-strerror.h  memory-support.c  memory-support.h
src/common/memory/: CosAllocator.c  CosMemory.c  CosRefCounter.c  CosRefCounter.h
src/filters/: CosASCII85Filter.c  CosASCIIHexFilter.c  CosFilter.c  CosRunLengthFilter.c
src/io/: CosBufferedInputStream.c  CosBufferedInputStream.h  CosFileInputStream.c  CosFileStream.c  CosInputStream.c  CosInputStream.h  CosInputStreamReader.c  CosInputStreamReader.h  CosMemoryInputStream.c  CosMemoryStream.c  CosStream.c  CosStreamReader.c  Format.c  string-support.c
src/lex/: CosLexer.c  CosLexer.h
src/objects/: CosArrayObj-Impl.h  CosArrayObj.c  CosArrayObjNode.c  CosBaseObj.c  CosBoolObj-Impl.h  CosBoolObj.c  CosBoolObjNode.c  CosDictObj.c  CosDictObjNode.c  CosDirectObj.c  CosIndirectObj.c  CosIndirectObjNode.c  CosIntObj.c  CosIntObjNode.c  CosIntegerObj.c  CosNameObj-Impl.h  CosNameObj.c  CosNameObjNode.c  CosNullObj.c  CosNullObjNode.c  CosObj-Impl.h  CosObj.c  CosObjCache.c  CosObjCache.h  CosObjID.c  CosObjNode.c  CosObjRef.c  CosObjRef.h  CosObject.c  CosObjectStorage.c  CosObjectStorage.h  CosRealObj.c  CosRealObjNode.c  CosReferenceObj.c  CosReferenceObjNode.c  CosStreamObj.c  CosStreamObjNode.c  CosStringObj-Impl.h  CosStringObj.c  CosStringObjNode.c
src/objects/nodes/: CosArrayNode-Private.h  CosArrayNode.c  CosBoolNode.c  CosDictNode.c  CosIndirectNode.c  CosIntegerNode.c  CosNameNode.c  CosNode-Private.h  CosNode.c  CosNullNode.c  CosObjNode.c  CosRealNode.c  CosReferenceNode.c  CosStreamNode.c  CosStringNode.c
src/parse/: CosBaseParser.c  CosFileParser.c  CosObjParser.c  CosObjParser.h  CosParser.c  CosParser.h  CosToken.c  CosToken.h  CosTokenizer.c  CosTokenizer.h
src/parse/tokenizer/: CosToken.h  CosTokenEntry.c  CosTokenEntry.h  CosTokenValue.c  CosTokenValue.h
src/syntax/: CosKeywords.c  CosKeywords.h  CosSyntax.c  CosSyntax.h
src/syntax/tokenizer/: CosToken.c  CosToken.h  CosTokenEntry.c  CosTokenizer.c  (+4 more)
src/xref/: CosXrefEntry.c  CosXrefSection.c  CosXrefSubsection.c  CosXrefTable.c  CosXrefTableParser.c
tests/: CMakeLists.txt  CosTest.h  ObjectTest.cpp  parser.c  tokenizer.c
tests/filters/: ascii-hex.c  ascii85.c  run-length.c
tests/fuzz/: CMakeLists.txt  fuzz.c
tests/fuzz/dictionaries/: cos.dict
tests/libcos++/: ObjectTest.cpp
tests/nodes/: basic.c
tests/parse/: CosObjParser-Test.c  CosTokenizer-Test.c
tests/unit/: test-dict.c
tests/unit-tests/: dict.c  file-structure.c  indirect-obj.c  obj.c  test-dict.c  tokenizer.c  xref-table.c
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt  HeaderCompilationDatabase.cpp  HeaderCompilationDatabase.h  MacroExpansionTracker.cpp  MacroExpansionTracker.h
tools/public-api-fixer/: AnnotationCheckAction.cpp  AnnotationCheckAction.h  CMakeLists.txt  MissingAnnotationCallback.cpp  MissingAnnotationCallback.h  main.cpp
tools/public-api-fixer/tests/: fixture.h  harness.sh
(+43 files in other folders)
